[package]
name = "eth-knife"
version = "0.1.0"
authors = [ "iBhagwan <bhagwan@disroot.org>" ]
license = "MIT"
edition = "2024"
description = """
The Swiss army knife for ethereum
"""

[dependencies]
# Error handling
eyre = "0.6.12"
# uncomment for backtrace support
# stable-eyre = "0.2.2"

# Async
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

# Ethers / Http
# alloy = { git = "https://github.com/alloy-rs/alloy.git", features = [
alloy = { version = "1.0", features = [
    "default",
    "signer-mnemonic",
    "signer-keystore",
    "k256" # recover_signer
] }
url = { version = "2.5.4", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
# rand = { version = "0.9.0", default-features = false, features = ["os_rng", "thread_rng"] }
eth-keystore = { git = "https://github.com/ibhagwan/eth-keystore-rs", branch = "v4", features = ["geth-compat"] }
blst = "0.3.15"
# For DepositData merkle root calculation
tree_hash = "0.10.0"
tree_hash_derive = "0.10.0"
ethereum_serde_utils = "0.8.0"


# Cli & config serialization
clap = { version = "4.5.45", features = ["derive", "string"] }
clap-serde-derive = "0.2.1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.142"
serde_jsonc = "1.0.108"
toml = "0.8.23"
jfs = "0.9"
# clap-repl = { version = "0.3.2", features = ["async"] }
clap-repl = { git = "https://github.com/HKalbasi/clap-repl.git", features = ["async"] }

# Logging
log = "0.4.27"
slog = "2.7.0"
slog-atomic = "3.1.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.1"
# slog-async = "2.8.0"
colored = "3.0.0"

# Misc
time = "0.3.41"
chrono = "0.4.41"
once_cell = "1.21.3"
shellexpand = "3.1.1"
termion = "4.0.5"
# Using re-exported version from alloy
# hex = "0.4.3"

[dev-dependencies]
ethsign = { version = "0.9", default-features = false, features = ["pure-rust"] }
tiny-bip39 = { version = "2.0.0" }
nam-tiny-hderive = { version = "0.3.1-nam.0" }
